--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ $(document).ready(function() {
 </div>
 <!-- MENU-------------------->
 
-<!-- Container 0------------------->
+<!-- Container 0   ANIMATION !------------------->
 <a id="page0"></a>
 <div id="bounceOut" class="bounceOut">
 <h1>ANIMATION !</h1>
