--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ $(document).ready(function() {
  </ul>
 </div>
 
-<!-- MENU-------------------->
+<!-- MENU- END------------------->
 
 <!-- Container 0   ANIMATION !------------------->
 
