--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@ $(document).ready(function() {
 
 </script>
 
+<!-- SCRIPT END-------------------->
+
+
+
 <body>
   
 <!-- MENU-------------------->
